Add research links

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ Links:
 <p>
 <h3>Biography</h3>
 Yuan Zhang is a senior data scientist at Samsung Research America. He is currently leading several big data analytics and machine learning projects, including TV program popularity analysis and TV program/Ads recommendation system. Yuan
-received his PhD degree in computer science from Michigan State University. Yuan has broad research interest in bioinformatics, data mining, and machine learning. He has published papers in top journals and conferences, including PLOS
-Computational Biology, Bioinformatics, PSB, ACM BCB, etc. He is the author of several open source bioinformatics software, including HMM-FRAME, SAT-Assembler, SALT, MetaDomain, and PseudoDomain. 
+received his PhD degree in computer science from Michigan State University. Yuan has broad research interest in
+bioinformatics, data mining, and machine learning. He has published <a href="research.html" title="Research"
+target="_self">research papers</a> in top journals and conferences, including PLOS Computational Biology, Bioinformatics,
+BMC Bioinformatics, PSB, ACM BCB, etc. He is the author of several open source bioinformatics software, including HMM-FRAME, SAT-Assembler, SALT, MetaDomain, and PseudoDomain. 
 </p>
 
 </br>
