--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
         For the full publucation list, see Yuan's <a href="http://scholar.google.com/citations?user=Tc_U_9YAAAAJ&hl=en">Google Scholar</a>.
 	<ol>
          <div id="publication">
-                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Scalable and Accurate Targeted Gene Assembly Tool (SAT-Assembler) for Next-Generation Sequencing Data.
+                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Scalable and Accurate Targeted Gene Assembly Tool (SAT-Assembler) for Next-Generation Sequencing Data. <a href="docs/HMM-FRAME.pdf" title="HMM-FRAME" target="_self">(PDF)</a>
 PLOS Computational Biology, PLOS Computational Biology, 10(8): e1003737, 2014.</li>
                 <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Sensitive and Accurate protein domain cLassification Tool (SALT) for short reads,
 Bioinformatics, 29(17):2103-2111, 2013</li>
