Edit the publications

--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@ Phone: (408)544-5714</br>
 Address: 75 W Plumeria Dr, San Jose, CA, 95134</br>
 </br>
 Links:
-<a href="https://www.linkedin.com/in/yuanzhang1">LinkedIn</a>,
-<a href="http://scholar.google.com/citations?user=Tc_U_9YAAAAJ&hl=en">Google Scholar</a></p> 
+<a href="https://www.linkedin.com/in/yuanzhang1", title="Yuan Zhang's LinkedIn homepage", target="_blank">LinkedIn</a>,
+<a href="http://scholar.google.com/citations?user=Tc_U_9YAAAAJ&hl=en", title="Yuan Zhang's Google Scholar", target="_blank">Google Scholar</a></p> 
 
 <p>
 <h3>Biography</h3>
 Yuan Zhang is a senior data scientist at Samsung Research America. He is currently leading several big data analytics and machine learning projects, including TV program popularity analysis and TV program/Ads recommendation system. Yuan
 received his PhD degree in computer science from Michigan State University. Yuan has broad research interest in
-bioinformatics, data mining, and machine learning. He has published <a href="research.html" title="Research"
-target="_self">research papers</a> in top journals and conferences, including PLOS Computational Biology, Bioinformatics,
-BMC Bioinformatics, PSB, ACM BCB, etc. He is the author of several open source bioinformatics software, including HMM-FRAME, SAT-Assembler, SALT, MetaDomain, and PseudoDomain. 
+bioinformatics, data mining, and machine learning. He has published <a href="research.html" title="Research", target="_self">research papers</a> in top journals and conferences, including <a href="http://journals.plos.org/ploscompbiol/", title="PLOS Computational Biology", target="_blank">PLOS Computational Biology</a>, <a href="http://bioinformatics.oxfordjournals.org/", title="Bioinformatics", target="_blank">Bioinformatics</a>,
+<a href="http://www.biomedcentral.com/bmcbioinformatics", title="BMC Bioinformatics", target="_blank">BMC Bioinformatics</a>, <a href="http://psb.stanford.edu/", title="Bioinformatics", target="_blank">PSB</a>, <a href="http://www.cse.buffalo.edu/ACM-BCB2014/" title="ACM BCB", target="_blank">ACM BCB</a>, etc. He is the author of several open source bioinformatics software, including HMM-FRAME, SAT-Assembler, SALT, MetaDomain, and PseudoDomain. 
 </p>
 
 </br>
