--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ function clearText(field){
 <div id="leftnav">
 	<ul>
 	<li><a href="index.html" title="Homepage" target="_self">Home</a></li>
-	<li><a href="research.html" title="Research" target="_self">Research</a></li>
+	<li><a href="publications.html" title="Publications" target="_self">Publications</a></li>
 	<li><a href="service.html" title="Service" target="_self">Service</a></li>
 	<li><a href="contact.html" title="Contact" target="_self">Contact</a></li>
 	</ul>
