--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="leftnav">
 	<ul>
 	<li><a href="index.html" title="Homepage" target="_self">Home</a></li>
-	<li><a href="research.html" title="Research" target="_self">Research</a></li>
+	<li><a href="publications.html" title="Research" target="_self">Publications</a></li>
 	<li><a href="service.html" title="Service" target="_self">Service</a></li>
 	<li><a href="contact.html" title="Contact" target="_self">Contact</a></li>
 	</ul>
@@ -45,7 +45,7 @@ Links:
 <h3>Biography</h3>
 Yuan Zhang is a senior data scientist at Samsung Research America. He is currently leading several big data analytics and machine learning projects, including TV program popularity analysis and TV program/Ads recommendation system. Yuan
 received his PhD degree in computer science from Michigan State University. Yuan has broad research interest in
-bioinformatics, data mining, and machine learning. He has published <a href="research.html" title="Research", target="_self">research papers</a> in top journals and conferences, including <a href="http://journals.plos.org/ploscompbiol/", title="PLOS Computational Biology", target="_blank">PLOS Computational Biology</a>, <a href="http://bioinformatics.oxfordjournals.org/", title="Bioinformatics", target="_blank">Bioinformatics</a>,
+bioinformatics, data mining, and machine learning. He has published <a href="publications.html" title="Publications", target="_self">research papers</a> in top journals and conferences, including <a href="http://journals.plos.org/ploscompbiol/", title="PLOS Computational Biology", target="_blank">PLOS Computational Biology</a>, <a href="http://bioinformatics.oxfordjournals.org/", title="Bioinformatics", target="_blank">Bioinformatics</a>,
 <a href="http://www.biomedcentral.com/bmcbioinformatics", title="BMC Bioinformatics", target="_blank">BMC Bioinformatics</a>, <a href="http://psb.stanford.edu/", title="Bioinformatics", target="_blank">PSB</a>, <a href="http://www.cse.buffalo.edu/ACM-BCB2014/" title="ACM BCB", target="_blank">ACM BCB</a>, etc. He is the author of several open source bioinformatics software, including <a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">HMM-FRAME</a>, <a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a>, <a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">SALT</a>, <a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a>, and <a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a>.
 </p>
 
