--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,7 @@
 	<ul>
 	<li><a href="index.html" title="Homepage" target="_self">Home</a></li>
 	<li><a href="publications.html" title="Publications" target="_self">Publications</a></li>
+        <li><a href="software.html" title="Software" target="_self">Software</a></li>
 	<li><a href="service.html" title="Service" target="_self">Service</a></li>
 	<li><a href="contact.html" title="Contact" target="_self">Contact</a></li>
 	</ul>
