--- a/software.html
+++ b/software.html
@@ -21,14 +21,19 @@
 	<ul>
 	<li><a href="index.html" title="Homepage" target="_self">Home</a></li>
 	<li><a href="publications.html" title="Publications" target="_self">Publications</a></li>
-	<li><a href="service.html" title="Service" target="_self">Service</a></li>
 	<li><a href="software.html" title="Software" target="_self">Software</a></li>
+	<li><a href="service.html" title="Service" target="_self">Service</a></li>
 	<li><a href="contact.html" title="Contact" target="_self">Contact</a></li>
 	</ul>
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
-	<ul><lh>My Software</lh>
-	</ul>
+	<dl>
+	  <lh>My Software</lh>
+	  <dt>HMM-FRAME</dt>
+	  <dd>HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
+	      sequencing (NGS) sequences using an augmented Viterbi algorithm on profile hidden Markov models. 
+	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families </dd>
+	</dl>
 		
 		
 		
