--- a/software.html
+++ b/software.html
@@ -28,7 +28,7 @@
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
 	<dl>
-	  <lh>My Software</lh>
+	  <h2>My Software</h2>
 	  <dt>HMM-FRAME</dt>
 	  <dd>HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
 	      sequencing (NGS) sequences using an augmented Viterbi algorithm on profile hidden Markov models. 
