--- a/software.html
+++ b/software.html
@@ -28,7 +28,7 @@
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
 	<dl>
-	  <h2>My Software</h2>
+	  <span class="list-title">My Software</span></br></br>
 	  <p>
 	  <dt>HMM-FRAME</dt>
 	  <dd>HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
