--- a/software.html
+++ b/software.html
@@ -30,7 +30,7 @@
 	<dl>
 	  <span class="list-title">My Software</span></br></br>
 	  <p>
-	  <dt>HMM-FRAME</dt>
+	  <dt>HMM-FRAME</dt></br>
 	  <dd>HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
 	      sequencing (NGS) sequences using an augmented Viterbi algorithm on profile hidden Markov models. 
 	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families </dd>
