--- a/software.html
+++ b/software.html
@@ -30,10 +30,37 @@
 	<dl>
 	  <span class="list-title">My Software</span></br></br>
 	  <p>
-	  <dt>HMM-FRAME</dt>
-	  <dd></br>HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
-	      sequencing (NGS) sequences using an augmented Viterbi algorithm on profile hidden Markov models. 
-	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families </dd>
+	  <dt><a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">HMM-FRAME</a><dt>
+	  <dd></br>
+	      HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
+	      sequencing (NGS) data using an augmented Viterbi algorithm on profile hidden Markov models (profile HMMs). 
+	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families
+	  </dd>
+	  <dt><a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
+	  <dd></br>
+	      SAT-Assembler is a scalable and accurate gene assembly tool for large-scale RNA_seq and metagenomic data. 
+	      It recovers genes from gene families of particular interest to biologists 
+	      with high coverage, low chimera rate, and extremely low memory usage compared with exiting gene aasembly tools.  
+	      Moreover, it is naturally compitable with parallel computing platforms. 
+          </dd>
+          <dt><a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">SALT</a></dt>
+	  <dd></br>
+	      SALT is designed to sensitively and accurately classify short sequences into their native protein 
+	      domain families with extremely low memory usage.
+	  </dd>
+          <dt><a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a></dt>
+	  <dd></br>
+	      MetaDomain is a protein domain classification tool designed for very short next-generation sequencing reads. 
+	      It achieves better sensitivity and low false positive rate compared with the state-of-the-art profile hidden 
+	      Markov model (profile HMM) alignment tool in identifying encoded domains from short sequences.  
+	  </dd>
+          <dt><a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a></dt>
+	  <dd></br>
+              Pseudogenes are dysfunctional DNA sequences that share sequence similarities with functional genes. 
+              Accurate identiﬁcation of pseudogenes is important to understand biological and evolutionary histories 
+              of genomes and genes. PseudoDomain is a processed pseudogene identification tool with high sensitivity and low false positive rate. 
+              In addition, it can accurately predict the number and positions of frameshifts within putative pseudogenes.
+          </dd>
 	  </p>
 	</dl>
 		
