Add software and links

--- a/software.html
+++ b/software.html
@@ -34,7 +34,10 @@
 	  <dd>
 	      HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
 	      sequencing (NGS) data using an augmented Viterbi algorithm on profile hidden Markov models (profile HMMs). 
-	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families
+	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families.
+              <a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">Tool</a>
+	      <a href="docs/SAT-Assembler.pdf" title="HMM-FRAME Paper" target="_blank">(Paper)</a> 
+	      <a href="bibs/HMM-FRAME.bib" title="HMM-FRAME BibTex" target="_blank">(BibTex)</a> 
 	  </dd></br>
 	  <dt><a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
 	  <dd>
