--- a/publications.html
+++ b/publications.html
@@ -31,12 +31,12 @@
         For the full publucation list, see Yuan's <a href="http://scholar.google.com/citations?user=Tc_U_9YAAAAJ&hl=en">Google Scholar</a>.
 	<ol>
          <div id="publication">
-                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Scalable and Accurate Targeted Gene Assembly Tool (SAT-Assembler) for Next-Generation Sequencing Data. PLOS Computational Biology, 10(8): e1003737, 2014. <a href="docs/SAT-Assembler.pdf" title="SAT-Assembler" target="_blank">(PDF)</a></li>
-                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Sensitive and Accurate protein domain cLassification Tool (SALT) for short reads, Bioinformatics, 29(17):2103-2111, 2013. <a href="docs/SALT.pdf" title="HMM-FRAME" target="_self">(PDF)</a></li>
-                <li><b>Yuan Zhang</b> and Yanni Sun, PseudoDomain: identification of processed pseudogenes based on protein domain classification. ACM Conference on Bioinformatics, Computational Biology and Biomedicine (ACM BCB), 2012. <a href="docs/PseudoDomain.pdf" title="PseudoDomain" target="_self">(PDF)</a></li>  
-                <li><b>Yuan Zhang</b> and Yanni Sun, MetaDomain: a profile HMM-based protein domain classification tool for short sequences. Pacific Symposium on Biocomputing (PSB), 2012. <a href="docs/MetaDomain.pdf" title="MetaDomain" target="_self">(PDF)</a></li>
-		<li><b>Yuan Zhang</b> and Yanni Sun, HMM-FRAME: accurate protein domain classification for metagenomic sequences containing frameshift errors. BMC Bioinformatics, 12(1): 198, 2011. <a href="docs/HMM-FRAME.pdf" title="HMM-FRAME" target="_self">(PDF)</a></li>
-                <li>Zhongyuan Lai, Wenyu Liu and <b>Yuan Zhang</b>. Perceptual Relevance Measure for Generic Shape Coding, Data Compression Conference (DCC), 2009. <a href="docs/PRM.pdf" title="PRM" target="_self">(PDF)</a></li>
+                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Scalable and Accurate Targeted Gene Assembly Tool (SAT-Assembler) for Next-Generation Sequencing Data. PLOS Computational Biology, 10(8): e1003737, 2014. <a href="docs/SAT-Assembler.pdf" title="SAT-Assembler" target="_blank">(Paper)</a></li>
+                <li><b>Yuan Zhang</b>, Yanni Sun, and Jamse R. Cole. A Sensitive and Accurate protein domain cLassification Tool (SALT) for short reads, Bioinformatics, 29(17):2103-2111, 2013. <a href="docs/SALT.pdf" title="HMM-FRAME" target="_self">(Paper)</a></li>
+                <li><b>Yuan Zhang</b> and Yanni Sun, PseudoDomain: identification of processed pseudogenes based on protein domain classification. ACM Conference on Bioinformatics, Computational Biology and Biomedicine (ACM BCB), 2012. <a href="docs/PseudoDomain.pdf" title="PseudoDomain" target="_self">(Paper)</a></li>  
+                <li><b>Yuan Zhang</b> and Yanni Sun, MetaDomain: a profile HMM-based protein domain classification tool for short sequences. Pacific Symposium on Biocomputing (PSB), 2012. <a href="docs/MetaDomain.pdf" title="MetaDomain" target="_self">(Paper)</a></li>
+		<li><b>Yuan Zhang</b> and Yanni Sun, HMM-FRAME: accurate protein domain classification for metagenomic sequences containing frameshift errors. BMC Bioinformatics, 12(1): 198, 2011. <a href="docs/HMM-FRAME.pdf" title="HMM-FRAME" target="_self">(Paper)</a></li>
+                <li>Zhongyuan Lai, Wenyu Liu and <b>Yuan Zhang</b>. Perceptual Relevance Measure for Generic Shape Coding, Data Compression Conference (DCC), 2009. <a href="docs/PRM.pdf" title="PRM" target="_self">(Paper)</a></li>
         </div> 
 	</ol>
   <!-- InstanceEndEditable --></div>
