--- a/software.html
+++ b/software.html
@@ -35,9 +35,9 @@
 	      HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
 	      sequencing (NGS) data using an augmented Viterbi algorithm on profile hidden Markov models (profile HMMs). 
 	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families.
-              <a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">(Tool)</a>&nbsp;
-	      <a href="docs/SAT-Assembler.pdf" title="HMM-FRAME Paper" target="_blank">(Paper)</a>&nbsp; 
-	      <a href="bibs/HMM-FRAME.bib" title="HMM-FRAME BibTex" target="_blank">(BibTex)</a> 
+              <a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">(Tool)</a>
+	      <a href="docs/SAT-Assembler.pdf" title="HMM-FRAME Paper" target="_self">(Paper)</a> 
+	      <a href="bibs/HMM-FRAME.bib" title="HMM-FRAME BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
 	  <dt><a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
 	  <dd>
@@ -45,17 +45,26 @@
 	      It recovers genes from gene families of particular interest to biologists 
 	      with high coverage, low chimera rate, and extremely low memory usage compared with exiting gene aasembly tools.  
 	      Moreover, it is naturally compitable with parallel computing platforms. 
+              <a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">(Tool)</a>
+	      <a href="docs/SAT-Assembler.pdf" title="SAT-Assembler Paper" target="_self">(Paper)</a> 
+	      <a href="bibs/SAT-Assembler.bib" title="SAT-Assembler BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
           <dt><a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">SALT</a></dt>
 	  <dd>
 	      SALT is designed to sensitively and accurately classify short sequences into their native protein 
 	      domain families with extremely low memory usage.
+              <a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">(Tool)</a>
+	      <a href="docs/SAT-Assembler.pdf" title="SALT Paper" target="_self">(Paper)</a> 
+	      <a href="bibs/SALT.bib" title="SALT BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
           <dt><a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a></dt>
 	  <dd>
 	      MetaDomain is a protein domain classification tool designed for very short next-generation sequencing reads. 
 	      It achieves better sensitivity and low false positive rate compared with the state-of-the-art profile hidden 
 	      Markov model (profile HMM) alignment tool in identifying encoded domains from short sequences.  
+              <a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">(Tool)</a>
+	      <a href="docs/SAT-Assembler.pdf" title="MetaDomain Paper" target="_self">(Paper)</a> 
+	      <a href="bibs/MetaDomain.bib" title="MetaDomain BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
           <dt><a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a></dt>
 	  <dd>
@@ -63,6 +72,9 @@
               Accurate identiﬁcation of pseudogenes is important to understand biological and evolutionary histories 
               of genomes and genes. PseudoDomain is a processed pseudogene identification tool with high sensitivity and low false positive rate. 
               In addition, it can accurately predict the number and positions of frameshifts within putative pseudogenes.
+              <a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">(Tool)</a>
+	      <a href="docs/SAT-Assembler.pdf" title="PseudoDomain Paper" target="_self">(Paper)</a> 
+	      <a href="bibs/PseudoDomain.bib" title="PseudoDomain BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
 	  </p>
 	</dl>
