--- a/software.html
+++ b/software.html
@@ -36,7 +36,7 @@
 	      sequencing (NGS) data using an augmented Viterbi algorithm on profile hidden Markov models (profile HMMs). 
 	      By correcting the frameshift errors, it can classify more NGS sequences into their native protein domain families.
               <a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">(Tool)</a>
-	      <a href="docs/SAT-Assembler.pdf" title="HMM-FRAME Paper" target="_self">(Paper)</a> 
+	      <a href="docs/HMM-FRAME.pdf" title="HMM-FRAME Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/HMM-FRAME.bib" title="HMM-FRAME BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
 	  <dt><a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
@@ -54,7 +54,7 @@
 	      SALT is designed to sensitively and accurately classify short sequences into their native protein 
 	      domain families with extremely low memory usage.
               <a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">(Tool)</a>
-	      <a href="docs/SAT-Assembler.pdf" title="SALT Paper" target="_self">(Paper)</a> 
+	      <a href="docs/SALT.pdf" title="SALT Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/SALT.bib" title="SALT BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
           <dt><a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a></dt>
@@ -63,7 +63,7 @@
 	      It achieves better sensitivity and low false positive rate compared with the state-of-the-art profile hidden 
 	      Markov model (profile HMM) alignment tool in identifying encoded domains from short sequences.  
               <a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">(Tool)</a>
-	      <a href="docs/SAT-Assembler.pdf" title="MetaDomain Paper" target="_self">(Paper)</a> 
+	      <a href="docs/MetaDomain.pdf" title="MetaDomain Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/MetaDomain.bib" title="MetaDomain BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
           <dt><a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a></dt>
@@ -73,7 +73,7 @@
               of genomes and genes. PseudoDomain is a processed pseudogene identification tool with high sensitivity and low false positive rate. 
               In addition, it can accurately predict the number and positions of frameshifts within putative pseudogenes.
               <a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">(Tool)</a>
-	      <a href="docs/SAT-Assembler.pdf" title="PseudoDomain Paper" target="_self">(Paper)</a> 
+	      <a href="docs/PseudoDomain.pdf" title="PseudoDomain Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/PseudoDomain.bib" title="PseudoDomain BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
 	  </p>
