--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
 	</ul>
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
-<span class="list-title">Service</span></br></br>
+<span class="list-title">Service</span></br>
 <p>
 <ul>
 <div id="publication">
