Edit software links

--- a/software.html
+++ b/software.html
@@ -30,7 +30,7 @@
 	<dl>
 	  <span class="list-title">My Software</span></br></br>
 	  <p>
-	  <dt><a href="https://github.com/zhangy72/HMM-FRAME", title="HMM-FRAME", target="_self">HMM-FRAME</a><dt>
+	  <dt><a href="http://sourceforge.net/projects/HMM-FRAME", title="HMM-FRAME", target="_self">HMM-FRAME</a><dt>
 	  <dd>
 	      HMM-FRAME is designed to accurately locate and correct frameshift errors in next-generation 
 	      sequencing (NGS) data using an augmented Viterbi algorithm on profile hidden Markov models (profile HMMs). 
@@ -40,7 +40,7 @@
 	      <a href="docs/HMM-FRAME.pdf" title="HMM-FRAME Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/HMM-FRAME.bib" title="HMM-FRAME BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
-	  <dt><a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
+	  <dt><a href="http://sourceforge.net/projects/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
 	  <dd>
 	      SAT-Assembler is a scalable and accurate gene assembly tool for large-scale RNA_seq and metagenomic data. 
 	      It recovers genes from gene families of particular interest to biologists 
@@ -51,7 +51,7 @@
 	      <a href="docs/SAT-Assembler.pdf" title="SAT-Assembler Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/SAT-Assembler.bib" title="SAT-Assembler BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
-          <dt><a href="https://github.com/zhangy72/SALT", title="SALT", target="_self">SALT</a></dt>
+          <dt><a href="http://sourceforge.net/projects/SALT1", title="SALT", target="_self">SALT</a></dt>
 	  <dd>
 	      SALT is designed to sensitively and accurately classify short sequences into their native protein 
 	      domain families with extremely low memory usage.
@@ -60,7 +60,7 @@
 	      <a href="docs/SALT.pdf" title="SALT Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/SALT.bib" title="SALT BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
-          <dt><a href="https://github.com/zhangy72/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a></dt>
+          <dt><a href="http://sourceforge.net/projects/MetaDomain", title="MetaDomain", target="_self">MetaDomain</a></dt>
 	  <dd>
 	      MetaDomain is a protein domain classification tool designed for very short next-generation sequencing reads. 
 	      It achieves better sensitivity and low false positive rate compared with the state-of-the-art profile hidden 
@@ -70,7 +70,7 @@
 	      <a href="docs/MetaDomain.pdf" title="MetaDomain Paper" target="_self">(Paper)</a> 
 	      <a href="bibs/MetaDomain.bib" title="MetaDomain BibTex" target="_self">(BibTex)</a> 
 	  </dd></br>
-          <dt><a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a></dt>
+          <dt><a href="http://sourceforge.net/projects/PseudoDomain", title="PseudoDomain", target="_self">PseudoDomain</a></dt>
 	  <dd>
               Pseudogenes are dysfunctional DNA sequences that share sequence similarities with functional genes. 
               Accurate identiﬁcation of pseudogenes is important to understand biological and evolutionary histories 
