Update PseudoDomain description

--- a/software.html
+++ b/software.html
@@ -75,6 +75,7 @@
               Pseudogenes are dysfunctional DNA sequences that share sequence similarities with functional genes. 
               Accurate identiﬁcation of pseudogenes is important to understand biological and evolutionary histories 
               of genomes and genes. PseudoDomain is a processed pseudogene identification tool with high sensitivity and low false positive rate. 
+              It can identify pseudogenes in species that do not have accurate genome annotations.
               In addition, it can accurately predict the number and positions of frameshifts within putative pseudogenes.
               <a href="http://sourceforge.net/projects/PseudoDomain", title="PseudoDomain", target="_self">(SourceForge)</a>
               <a href="https://github.com/zhangy72/PseudoDomain", title="PseudoDomain", target="_self">(GitHub)</a>
