Revise description of SAT-Assembler

--- a/software.html
+++ b/software.html
@@ -42,10 +42,10 @@
 	  </dd></br>
 	  <dt><a href="http://sourceforge.net/projects/SAT-Assembler", title="SAT-Assembler", target="_self">SAT-Assembler</a></dt>
 	  <dd>
-	      SAT-Assembler is a scalable and accurate gene assembly tool for large-scale RNA_seq and metagenomic data. 
+	      SAT-Assembler is a scalable and accurate gene assembly tool for large-scale RNA-Seq and metagenomic data. 
 	      It recovers genes from gene families of particular interest to biologists 
-	      with high coverage, low chimera rate, and extremely low memory usage compared with exiting gene aasembly tools.  
-	      Moreover, it is naturally compitable with parallel computing platforms. 
+	      with high coverage, low chimera rate, and extremely low memory usage compared with exiting gene assembly tools.  
+	      Moreover, it is naturally compatible with parallel computing platforms. 
               <a href="http://sourceforge.net/projects/SAT-Assembler", title="SAT-Assembler", target="_self">(SourceForge)</a>
               <a href="https://github.com/zhangy72/SAT-Assembler", title="SAT-Assembler", target="_self">(GitHub)</a>
 	      <a href="docs/SAT-Assembler.pdf" title="SAT-Assembler Paper" target="_self">(Paper)</a> 
