--- a/service.html
+++ b/service.html
@@ -32,8 +32,12 @@
 <ul>
 <div id="publication">
 <li>2015 PC Member, <a href="http://www.scirp.org/Conference/Home.aspx?ConferenceID=91", target="_blank">2015 International Conference on Advances in Biophysics (ICAB2015)</a></i>
+<li>2014 PC Member, <a href="http://www.iaria.org/conferences2015/BIOCOMPUTATION.html", target="_blank">
+  The International Symposium on Big Data and BioComputation (BIOCOMPUTATION 2015)</a></i>
+<li>2014 PC Member, <a href="http://www.scirp.org/Conference/OrganizingCommittee.aspx?ConferenceID=90", target="_blank">International Conference on Advances in Biophysics (ICAB 2015)</a></i>
 <li>2014 PC Member, <a href="http://www.icbeb.org/", target="_blank">The 3rd International Conference on Biomedical Engineering and Biotechnology (iCBEB2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.journals.elsevier.com/neurocomputing/", target="_blank">NeuroComputing</a></i>
+<li>2014 Reviewer, <a href="http://www.nature.com/srep/index.html", target="_blank">Scientific Reports by Nature Publishing Group</a></i>
 <li>2014 Reviewer, <a href="http://www.ieee-iccc.org/", target="_blank">IEEE/CIC International Conference on Communications in China (ICCC2014)</a></i>
 <li>2014 Reviewer, <a href="http://datamining.it.uts.edu.au/conferences/dsaa14/", target="_blank">The 2014 International Conference on Data Science and Advanced Analytics (DSAA2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.scienceengineering.org/ase/conference/2014/bigdata/beijing/website/", target="_blank">The Third ASE International Conference on Big Data Science and Computing (BigDataScience2014)</a></i>
