--- a/software.html
+++ b/software.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <link rel="shortcut icon" href="Templates/images/favicon.ico" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Resarch - Yuan Zhang's Website</title>
+<title>Software - Yuan Zhang's Website</title>
 <!-- InstanceEndEditable -->
 <link href="css/template.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
