Update work address

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Email: nick.zhangyuan@gmail.com</br>
 </br>
 Phone: (408)544-5714</br>
 </br>
-Address: 75 W Plumeria Dr, San Jose, CA, 95134</br>
+Address: 665 Clyde Ave, Mountain View, CA 94043</br>
 </br>
 Links:
 <a href="https://www.linkedin.com/in/yuanzhang1", title="Yuan Zhang's LinkedIn homepage", target="_blank">LinkedIn</a>,
