--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ Email: nick.zhangyuan@gmail.com</br>
 </br>
 Phone: (408)544-5714</br>
 </br>
-Address: 75 W Plumeria Dr, San Jose, CA, 95134</br>
+Address: 665 Clyde Avenue Mountain View, CA 94043</br>
 </br>
 Links: <a href="https://www.linkedin.com/in/yuanzhang1">LinkedIn</a>,
 <a href="http://scholar.google.com/citations?user=Tc_U_9YAAAAJ&hl=en">Google Scholar</a></p>
