--- a/service.html
+++ b/service.html
@@ -27,33 +27,33 @@
 	</ul>
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
-<span class="list-title">Service</span></br></br>
+<span class="list-big-title">Service</span></br></br>
 <p>
-<span class="list-title">Journal Reviews</span></br></br>
+<span class="list-title">Journal Reviews</span></br>
 <ul>
+<div id="publication">
 <li>2014 Reviewer, <a href="http://www.journals.elsevier.com/neurocomputing/", target="_blank">NeuroComputing</a></i>
 <li>2014 Reviewer, <a href="http://www.nature.com/srep/index.html", target="_blank">Scientific Reports by Nature Publishing Group</a></i>
 </ul>
 
-<span class="list-title">Conference Program Committee</span></br></br>
+<span class="list-title">Conference Reviews</span></br>
 <ul>
 <li>2015 PC Member, <a href="http://cci.drexel.edu/ieeebibm/bibm2015/", target="_blank">
 The IEEE International Conference on Bioinformatics and Biomedicine (IEEE BIBM 2015)</a></i>
 <li>2015 PC Member, <a href="http://www.iaria.org/conferences2015/BIOCOMPUTATION.html", target="_blank">
 The International Symposium on Big Data and BioComputation (BIOCOMPUTATION 2015)</a></i>
 <li>2015 PC Member, <a href="http://www.icbeb.org/", target="_blank">The 4th International Conference on Biomedical Engineering and Biotechnology (iCBEB2015)</a></i>
+<li>2015 Reviewer, <a href="http://www.journals.elsevier.com/neurocomputing/", target="_blank">NeuroComputing</a></i>
+<li>2015 Reviewer, <a href="http://sdata-wsdm-shanghai2015.weebly.com/", target="_blank">
 The 5th International Workshop on Scalable Data Analytics (SDA)</a></i>
-<li>2014 PC Member, <a href="http://www.icbeb.org/", target="_blank">The 3rd International Conference on Biomedical Engineering and Biotechnology (iCBEB2014)</a></i>
-</ul>
-<span class="list-title">Conference Reviews</span></br></br>
-<ul>
 <li>2015 Reviewer, <a href="http://ieee-icsc.org/icsc2015/", target="_blank">Ninth IEEE International Conference on Semantic Computing (IEEE ICSC 2015)</a></i>
 <li>2015 Reviewer, <a href="http://www.siam.org/meetings/sdm15/", target="_blank">SIAM International Conference on Data Mining (SDM15)</a></i>
+<li>2014 PC Member, <a href="http://www.icbeb.org/", target="_blank">The 3rd International Conference on Biomedical Engineering and Biotechnology (iCBEB2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.ieee-iccc.org/", target="_blank">IEEE/CIC International Conference on Communications in China (ICCC2014)</a></i>
 <li>2014 Reviewer, <a href="http://datamining.it.uts.edu.au/conferences/dsaa14/", target="_blank">The 2014 International Conference on Data Science and Advanced Analytics (DSAA2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.scienceengineering.org/ase/conference/2014/bigdata/beijing/website/", target="_blank">The Third ASE International Conference on Big Data Science and Computing (BigDataScience2014)</a></i>
-</ul>
 </div>
+</ul>
 </p>
 
 <!-- InstanceEndEditable --></div>
