--- a/service.html
+++ b/service.html
@@ -27,6 +27,9 @@
 	</ul>
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
+
+<title>Service</title>
+
 <span class="list-title">Journal Reviews</span></br>
 <ul>
 <li>2014 Reviewer, <a href="http://www.journals.elsevier.com/neurocomputing/", target="_blank">NeuroComputing</a></i>
@@ -55,6 +58,7 @@ The 5th International Workshop on Scalable Data Analytics (SDA)</a></i>
 <li>2014 Reviewer, <a href="http://www.ieee-iccc.org/", target="_blank">IEEE/CIC International Conference on Communications in China (ICCC2014)</a></i>
 <li>2014 Reviewer, <a href="http://datamining.it.uts.edu.au/conferences/dsaa14/", target="_blank">The 2014 International Conference on Data Science and Advanced Analytics (DSAA2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.scienceengineering.org/ase/conference/2014/bigdata/beijing/website/", target="_blank">The Third ASE International Conference on Big Data Science and Computing (BigDataScience2014)</a></i>
+<li>2014 Reviewer, <a href="http://www.acml2014.jvn.edu.vn/", target="_blank">The 6th Asian Conference on Machine Learning 2014</a></i>
 </div>
 </ul>
 
