--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
 
-<title>Service</title>
+<span class="label-title">Service</span>
 
 <span class="list-title">Journal Reviews</span></br>
 <ul>
