--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
 
-<p><span class="label-title">Service</span></p>
+<p><span class="label-title">Service</span></p></br><br>
 
 <span class="list-title">Journal Reviews</span></br>
 <ul>
