--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 </div>
 <div id="content"><!-- InstanceBeginEditable name="main" -->
 
-<p><span class="label-title">Service</span></p></br><br>
+<p><span class="label-title">Service</span></p></br>
 
 <span class="list-title">Journal Reviews</span></br>
 <ul>
@@ -54,11 +54,11 @@ The International Symposium on Big Data and BioComputation (BIOCOMPUTATION 2015)
 <li>2015 Reviewer, <a href="http://sdata-wsdm-shanghai2015.weebly.com/", target="_blank">
 The 5th International Workshop on Scalable Data Analytics (SDA)</a></i>
 <li>2015 Reviewer, <a href="http://ieee-icsc.org/icsc2015/", target="_blank">Ninth IEEE International Conference on Semantic Computing (IEEE ICSC 2015)</a></i>
-<li>2015 Reviewer, <a href="http://www.siam.org/meetings/sdm15/", target="_blank">SIAM International Conference on Data Mining (SDM15)</a></i>
-<li>2014 Reviewer, <a href="http://www.ieee-iccc.org/", target="_blank">IEEE/CIC International Conference on Communications in China (ICCC2014)</a></i>
-<li>2014 Reviewer, <a href="http://datamining.it.uts.edu.au/conferences/dsaa14/", target="_blank">The 2014 International Conference on Data Science and Advanced Analytics (DSAA2014)</a></i>
+<li>2015 Reviewer, <a href="http://www.siam.org/meetings/sdm15/", target="_blank">SIAM International Conference on Data Mining (SDM 2015)</a></i>
+<li>2014 Reviewer, <a href="http://www.ieee-iccc.org/", target="_blank">IEEE/CIC International Conference on Communications in China (ICCC 2014)</a></i>
+<li>2014 Reviewer, <a href="http://datamining.it.uts.edu.au/conferences/dsaa14/", target="_blank">The 2014 International Conference on Data Science and Advanced Analytics (DSAA 2014)</a></i>
 <li>2014 Reviewer, <a href="http://www.scienceengineering.org/ase/conference/2014/bigdata/beijing/website/", target="_blank">The Third ASE International Conference on Big Data Science and Computing (BigDataScience2014)</a></i>
-<li>2014 Reviewer, <a href="http://www.acml2014.jvn.edu.vn/", target="_blank">The 6th Asian Conference on Machine Learning 2014</a></i>
+<li>2014 Reviewer, <a href="http://www.acml2014.jvn.edu.vn/", target="_blank">The 6th Asian Conference on Machine Learning 2014 (ACML 2014)</a></i>
 </div>
 </ul>
 
